# traintracks

./: .gitignore  README.md  constraints.py  core.py  generator.py  puzzles.txt  pyproject.toml  solver.py
tests/: consts.py  test_core.py  test_solver.py
traintracks/: constraints.py  core.py  generator.py  solver.py
traintracks/cli/: __init__.py
